<?php

namespace App\Enum;

enum BadgeType: string
{
    case SCORING = 'scoring';

    case AWARDS = 'awards';

    // Logic not implemented yet
    // case POSTCOUNT = 'postcount';

    // Logic not implemented yet
    // case LIKES = 'likes';
}